deployment/k8s/gateway/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        # A key-value pair used by Service object to reference this Deployment 
        app: gateway
    spec:
      containers:
        - name: gateway
          # The image name has to match what's defined in "k8s_deploy" rule.
          # It will be replaced by Bazel adding the sha256 as it's tag
          image: gateway-image:latest
          imagePullPolicy: Always
          # Override the health check path
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
          ports:
            - containerPort: 8080
          # Reference the serect object
