deployment/k8s/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app: gateway
spec:
  # The type is NodePort allows receving external requests passing through the Ingress.
  type: NodePort
  selector:
    # The key-value pair we defined in "gateway-deployment"
    app: gateway
  ports:
    - port: 8080
      targetPort: 8080
