deployment/k8s/gateway/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  labels:
    app: gateway
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: gateway-service
          servicePort: 8080
